tests/negative/gold/duplicated_global_assign_test.gold
tests/negative/duplicated_global_assign_test.toit:6:1: error: Redefinition of 'global'
global := 3
^~~~~~
tests/negative/duplicated_global_assign_test.toit:5:1: note: First definition of 'global'
global := 3
^~~~~~
Compilation failed.
